Landing Page: Nav color changed on mobile and spacing adjustment corrected

--- a/src/Components/organisms/Nav/nav.css
+++ b/src/Components/organisms/Nav/nav.css
@@ -28,7 +28,7 @@
         left: 15px;
     }
     .navbar{
-        background-color: teal;
+        background-color: #333;
     }
 
     
