--- a/src/Components/pages/WorkOuts/WorkOuts.css
+++ b/src/Components/pages/WorkOuts/WorkOuts.css
@@ -3,29 +3,33 @@
 
 .img{
     position: absolute;
-    top: 150px;
+    top: 230px;
     right: 150px;
 }
 
 .toptag{
     position: absolute;
-    top: 35px;
+    top: 40px;
     right: 10px;
 }
 
 .right-tag{
     position: absolute;
-    right: 35px;
+    right: 28px;
 }
 
 .buttomtag{
     position: absolute;
-    top: 530px;
+    top: 580px;
     left: 650px;
    
 }
 
 /*Work out*/
+
+.section{
+  @apply mb-[200px] mt-32
+}
 
 .workouts{
     @apply w-[75%] mx-auto 
@@ -128,7 +132,6 @@
     }
 
     .join_btn, .nike_img{
-     /* margin-top: 50px; */
     width: 50%;
     margin: 50px auto;
     }
